--- a/home/templates/home/admin/editGiaoVien.html
+++ b/home/templates/home/admin/editGiaoVien.html
@@ -227,6 +227,14 @@
                 </a>
               </li>
             </ul>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="{% url 'thongKeLopHoc' %}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Thống kê lớp học</p>
+                </a>
+              </li>
+            </ul>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">
@@ -244,7 +252,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="pages/khoaHoc/project-add.html" class="nav-link">
+                <a href="{% url 'addKhoaHoc' %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Tạo Mới</p>
                 </a>
@@ -351,14 +359,6 @@
           </li>
           </li>
           <li class="nav-header">EXAMPLES</li>
-          <li class="nav-item">
-            <a href="pages/calendar.html" class="nav-link">
-              <i class="nav-icon far fa-calendar-alt"></i>
-              <p>
-                Thời khóa biểu
-              </p>
-            </a>
-          </li>
           <li class="nav-item">
             <a href="{% url 'logoutAdmin' %}" class="nav-link">
               <i class="nav-icon far fa-calendar-alt"></i>
