--- a/home/templates/home/admin/editLopHoc.html
+++ b/home/templates/home/admin/editLopHoc.html
@@ -207,7 +207,7 @@
       </div>
 
       <!-- Sidebar Menu -->
-      <nav class="mt-2">
+            <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
@@ -224,6 +224,14 @@
                 <a href="{% url 'thongKe' %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Thống kê</p>
+                </a>
+              </li>
+            </ul>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="{% url 'thongKeLopHoc' %}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Thống kê lớp học</p>
                 </a>
               </li>
             </ul>
@@ -250,7 +258,7 @@
                 </a>
               </li>
             </ul>
-          </li>
+          </li> 
           <li class="nav-item">
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-copy"></i>
@@ -349,15 +357,8 @@
               </li>
             </ul>
           </li>
-          <li class="nav-header">EXAMPLES</li>
-          <li class="nav-item">
-            <a href="pages/calendar.html" class="nav-link">
-              <i class="nav-icon far fa-calendar-alt"></i>
-              <p>
-                Thời khóa biểu
-              </p>
-            </a>
           </li>
+          <li class="nav-header">EXAMPLES</li>
           <li class="nav-item">
             <a href="{% url 'logoutAdmin' %}" class="nav-link">
               <i class="nav-icon far fa-calendar-alt"></i>
