--- a/home/templates/home/giaoVien/editGV.html
+++ b/home/templates/home/giaoVien/editGV.html
@@ -22,7 +22,7 @@
                 <input type="text" id="maGV" class="form-control" value="{{giaoVien.maGV}}"  disabled>
               </div>
               <div class="form-group">
-                <label for="inputName">Tên Học Viên</label>
+                <label for="inputName">Tên Giáo Viên</label>
                 <input type="text" id="tenGV" class="form-control" value="{{giaoVien.tenGV}}">
               </div>
               <div class="form-group">
