--- a/home/templates/home/admin/dsGiaoVien.html
+++ b/home/templates/home/admin/dsGiaoVien.html
@@ -154,7 +154,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Thanh toán</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-dismiss="modal" onclick="close();" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -163,7 +163,7 @@
                         {% csrf_token %}
                         <input id="csrf" style="display: none" value="{{ csrf_token }}">
                         <div class="form-group">
-                            <label for="">Mã học viên</label>
+                            <label for="">Mã giáo viên</label>
                             <input type="text" class="form-control" value="" name="hocVien_id" id="giaoVien_id" placeholder="Nhập mã học viên" disabled>
                         </div>
                         <div class="form-group">
@@ -181,7 +181,7 @@
                     </form>
                 </div>
                 <div class="modal-footer justify-content-between">
-                    <button type="button" class="btn btn-default" data-dismiss="modal" aria-label="Close">Đóng</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="close-modal" onclick="close();" aria-label="Close">Đóng</button>
                     <button type="button" class="btn btn-primary" onclick="traLuong();">Thanh toán</button>
                 </div>
             </div>
@@ -244,6 +244,10 @@
   function modalLuong(maGV) {
     $('#modal-luong').modal('show');
     $('#giaoVien_id').val(maGV);
+  }
+
+  function close() {
+    document.getElementById('modal-luong').style.display = 'none';
   }
 
   function traLuong() {
